; ModuleID = '/home/carl/AnghaBench/lede/package/network/services/ead/src/extr_pw_encrypt_md5.c___md5_Init.c'
source_filename = "/home/carl/AnghaBench/lede/package/network/services/ead/src/extr_pw_encrypt_md5.c___md5_Init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MD5Context = type { i32*, i64* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.MD5Context*)* @__md5_Init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__md5_Init(%struct.MD5Context* %0) #0 {
  %2 = alloca %struct.MD5Context*, align 8
  store %struct.MD5Context* %0, %struct.MD5Context** %2, align 8
  %3 = load %struct.MD5Context*, %struct.MD5Context** %2, align 8
  %4 = getelementptr inbounds %struct.MD5Context, %struct.MD5Context* %3, i32 0, i32 1
  %5 = load i64*, i64** %4, align 8
  %6 = getelementptr inbounds i64, i64* %5, i64 1
  store i64 0, i64* %6, align 8
  %7 = load %struct.MD5Context*, %struct.MD5Context** %2, align 8
  %8 = getelementptr inbounds %struct.MD5Context, %struct.MD5Context* %7, i32 0, i32 1
  %9 = load i64*, i64** %8, align 8
  %10 = getelementptr inbounds i64, i64* %9, i64 0
  store i64 0, i64* %10, align 8
  %11 = load %struct.MD5Context*, %struct.MD5Context** %2, align 8
  %12 = getelementptr inbounds %struct.MD5Context, %struct.MD5Context* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = getelementptr inbounds i32, i32* %13, i64 0
  store i32 1732584193, i32* %14, align 4
  %15 = load %struct.MD5Context*, %struct.MD5Context** %2, align 8
  %16 = getelementptr inbounds %struct.MD5Context, %struct.MD5Context* %15, i32 0, i32 0
  %17 = load i32*, i32** %16, align 8
  %18 = getelementptr inbounds i32, i32* %17, i64 1
  store i32 -271733879, i32* %18, align 4
  %19 = load %struct.MD5Context*, %struct.MD5Context** %2, align 8
  %20 = getelementptr inbounds %struct.MD5Context, %struct.MD5Context* %19, i32 0, i32 0
  %21 = load i32*, i32** %20, align 8
  %22 = getelementptr inbounds i32, i32* %21, i64 2
  store i32 -1732584194, i32* %22, align 4
  %23 = load %struct.MD5Context*, %struct.MD5Context** %2, align 8
  %24 = getelementptr inbounds %struct.MD5Context, %struct.MD5Context* %23, i32 0, i32 0
  %25 = load i32*, i32** %24, align 8
  %26 = getelementptr inbounds i32, i32* %25, i64 3
  store i32 271733878, i32* %26, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
